--- a/reactportfolio/package.json
+++ b/reactportfolio/package.json
@@ -12,9 +12,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "firebase": "^9.17.2",
+    "gsap-trial": "^3.11.4",
+    "leaflet": "^1.9.3",
+    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-loaders": "^3.0.1",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
